k8s/namespace.yml
# K8s Namespace config - canvote
# https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
apiVersion: v1
kind: Namespace
metadata:
  name: canvote
