k8s/auth-service.yml
# Authentication Service - K8s Configuration

# Deployment
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
# Configured to perform a rolling update: https://kubernetes.io/docs/tutorials/kubernetes-basics/update/update-intro/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
  namespace: canvote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: gcr.io/canvote/auth-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"

---

# Service
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: auth-service-svc
  namespace: canvote
spec:
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: auth-service-port
  selector:
    app: auth-service
