k8s/voting-service.yml
# Voting Service - K8s Configuration

# Deployment
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
# Configured to perform a rolling update: https://kubernetes.io/docs/tutorials/kubernetes-basics/update/update-intro/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-service-deployment
  namespace: canvote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: voting-service
    spec:
      containers:
      - name: voting-service
        image: gcr.io/canvote/voting-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
          - mountPath: "/app/media"
            name: volume
            subPath: vs-media
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: canvote-pvc

---

# Service
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: voting-service-svc
  namespace: canvote
spec:
  type: NodePort
  ports:
  - port: 3002
    targetPort: 3002
    protocol: TCP
    name: voting-service-port
  selector:
    app: voting-service
